<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.creativev.bootcamp.got.AddCharacterActivity">
<LinearLayout
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="360dp"
        android:scaleType="fitCenter"
        android:src="@drawable/profile_placeholder_full" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/text_character_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_group_house"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_baratheon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/btn_baratheon"
            android:padding="2dp" />

        <RadioButton
            android:id="@+id/radio_lannister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/btn_lannister"
            android:padding="2dp" />

        <RadioButton
            android:id="@+id/radio_stark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/btn_stark"
            android:padding="2dp" />

        <RadioButton
            android:id="@+id/radio_targaryen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/btn_targaryen"
            android:padding="2dp" />
    </RadioGroup>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|end"
        android:text="Save" />
</LinearLayout>
</ScrollView>